# py-search-similar-sentence

./: README.md  pyproject.toml
sample/train/aaa.h/: 001.sql  002.sql
sample/train/bbb.i/: 003.sql
src/py_search_similar_sentence/: controller.py  entrypoints.py
src/py_search_similar_sentence/searcher/: models.py  similar_sentence_searcher.py  similar_sql_searcher.py
