[project]
name = "py-search-similar-sentence"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "sqlparse>=0.4.4",
    "Levenshtein>=0.24.0",
    "pydantic>=2.6.1",
    "click>=8.1.7",
    "tqdm>=4.66.1",
    "pandas>=2.2.0",
    "tabulate>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
psss = "py_search_similar_sentence.entrypoints:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.2.1",
    "mypy>=1.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/py_search_similar_sentence"]

[tool.mypy]
ignore_missing_imports = true
